# gu-ml

./: Dockerfile  LICENSE  Makefile  README.md  compose.yaml  gu-ml.yaml  init.sql  requirements.txt
gu_ml/: main.py
gu_ml/api/routes/: card.py  healthcheck.py  router.py
gu_ml/core/: event_handlers.py
gu_ml/models/: card.py  healthcheck.py
gu_ml/services/: card_db.py  database.py  models.py
k8s/app/: gu-ml-deployment.yaml  gu-ml-secret.yaml  gu-ml-service.yaml
k8s/db/: postgres-deployment.yaml  postgres-secret.yaml  postgres-service.yaml
k8s/namespace/: ns.yaml
model/: eda.ipynb  lgb_model.joblib  model_training.ipynb
model-kedro/: README.md  pyproject.toml  session_store.db
model-kedro/.viz/: stats.json
model-kedro/conf/: logging.yml
model-kedro/conf/base/: catalog.yml
model-kedro/notebooks/: training.ipynb  update_data.ipynb
model-kedro/src/model_kedro/: __init__.py  __main__.py
model-kedro/src/model_kedro/pipelines/training_model/: __init__.py  nodes.py  pipeline.py
tests/: conftest.py
tests/test_api/: test_card.py
tests/test_service/: test_models.py
