[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "model_kedro"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
model-kedro = "model_kedro.__main__:main"

[tool.kedro]
package_name = "model_kedro"
project_name = "model_kedro"
kedro_init_version = "0.19.8"
tools = [ "Linting", "Data Structure", "Custom Logging", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "model_kedro.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "57dfbbae62c744649ca18f9e036c398d"
